// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test if camera is currentCamera, the cameraView checkBox checked == true and disabled == true  1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        basic_cameraView
      </option>
    </select>
  </article>
  <div
    className=""
  >
    <div
      className=""
    >
      currentCamera : 
    </div>
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
      type="checkbox"
    />
  </div>
</article>
`;

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test if camera isn't currentCamera, the cameraView checkBox checked == false and disabled == false  1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        basic_cameraView
      </option>
    </select>
  </article>
  <div
    className=""
  >
    <div
      className=""
    >
      currentCamera : 
    </div>
    <input
      defaultChecked={false}
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
      type="checkbox"
    />
  </div>
</article>
`;

exports[`MainEditor CameraView test set currentSceneTreeNode to be camera test set current camera test snapshot test set unactive camera is currentCamera, the currentCamera cameraView checkBox checked == true and disabled == true 1`] = `
<article
  className="wonder-camera-view"
>
  <article
    className="wonder-select"
  >
    <span
      className=""
    >
      type : 
    </span>
    <select
      onChange={[Function]}
      value="0"
    >
      <option
        value="0"
      >
        basic_cameraView
      </option>
    </select>
  </article>
  <div
    className=""
  >
    <div
      className=""
    >
      currentCamera : 
    </div>
    <input
      defaultChecked={true}
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
      type="checkbox"
    />
  </div>
</article>
`;
